force-app/main/default/objects/SL_Mass_Implementation__c/SL_Mass_Implementation__c.object-meta.xml
<CustomObject>
    <description>Main Object - main settings for Mass Add/Edit component</description>
    <label>ME Core: Implementation</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>