force-app/main/default/objects/SL_Mass_Implementation__c/fields/ExtID__c.field-meta.xml
<CustomField>
    <fullName>ExtID__c</fullName>
    <externalId>true</externalId>
    <label>ExtID</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>