force-app/main/default/objects/SL_Mass_Implementation__c/fields/Get_Element_from_List_Tab__c.field-meta.xml
<CustomField>
    <fullName>Get_Element_from_List_Tab__c</fullName>
    <description>This value is used for &apos;Add Multi&apos; on List Search Code</description>
    <inlineHelpText>This value is used for &apos;Add Multi&apos; on List Search Code</inlineHelpText>
    <label>Get Element From List Tab Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>