force-app/main/default/objects/SL_Mass_Implementation__c/fields/Lookup_Title_Get_List_Page__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Title_Get_List_Page__c</fullName>
    <label>Lookup Title Get List Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>