force-app/main/default/objects/SL_Mass_Implementation__c/fields/parentObjectName__c.field-meta.xml
<CustomField>
    <fullName>parentObjectName__c</fullName>
    <label>Parent Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>