force-app/main/default/objects/SL_Mass_Implementation__c/fields/Row_Qty_Values__c.field-meta.xml
<CustomField>
    <fullName>Row_Qty_Values__c</fullName>
    <defaultValue>&apos;10,20,30,50,100&apos;</defaultValue>
    <label>Row Qty Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>