force-app/main/default/objects/SL_Mass_Implementation__c/fields/Search_Object_Title__c.field-meta.xml
<CustomField>
    <fullName>Search_Object_Title__c</fullName>
    <label>Search Object Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>