force-app/main/default/objects/SL_Mass_Implementation__c/fields/Search_Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Search_Page_Title__c</fullName>
    <description>This value is used for &apos;Add Multi&apos; on List Search Code</description>
    <inlineHelpText>This value is used for &apos;Add Multi&apos; on List Search Code</inlineHelpText>
    <label>Search Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>