force-app/main/default/objects/SL_Mass_Implementation__c/fields/searchObjectName__c.field-meta.xml
<CustomField>
    <fullName>searchObjectName__c</fullName>
    <label>Search Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>