force-app/main/default/objects/SL_Mass_Implementation__c/fields/Show_Views_on_MassAdd_Page__c.field-meta.xml
<CustomField>
    <fullName>Show_Views_on_MassAdd_Page__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This param allows hide/show View&apos;s line above Search Result table</description>
    <label>Show Views on MassAdd Page</label>
    <type>Checkbox</type>
</CustomField>