force-app/main/default/objects/SL_Mass_Implementation__c/fields/targetObjectName__c.field-meta.xml
<CustomField>
    <fullName>targetObjectName__c</fullName>
    <label>Target Object Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>