force-app/main/default/objects/SL_Mass_Implementation__c/fields/targetObjectParentFieldName__c.field-meta.xml
<CustomField>
    <fullName>targetObjectParentFieldName__c</fullName>
    <label>Target Object Parent Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>