force-app/main/default/objects/SL_Mass_Implementation__c/fields/targetObjectSearchFieldName__c.field-meta.xml
<CustomField>
    <fullName>targetObjectSearchFieldName__c</fullName>
    <label>Target Object Search Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>