force-app/main/default/objects/SL_Mass_Implementation__c/fields/Using_Exists_Impl__c.field-meta.xml
<CustomField>
    <fullName>Using_Exists_Impl__c</fullName>
    <label>Using Exists Impl</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>